<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/stockName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:text="@string/stock_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stockQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:text="@string/quantity_0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sellRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell_stock"
        android:textSize="18sp" />
</LinearLayout>
