<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/buyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/buy"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/stock"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyLabel" />

    <EditText
        android:id="@+id/searchCompanyName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/search_company_name"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="168dp"
        app:layout_constraintTop_toBottomOf="@+id/stock"/>

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/quantity"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchCompanyName" />

    <EditText
        android:id="@+id/enterQuantity"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/enter_quantity"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="277dp"
        app:layout_constraintTop_toBottomOf="@+id/quantity"/>


    <TextView
        android:id="@+id/availableCashBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/available_cash_balance"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterQuantity" />

    <EditText
        android:id="@+id/availableCashBalance_placeholder"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/dollar_sign"
        android:padding="10dp"
        android:text="@string/_0_00"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/availableCashBalance"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cost"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableCashBalance_placeholder" />

    <EditText
        android:id="@+id/cost_placeholder"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:ems="16"
        android:hint="@string/dollar_sign"
        android:padding="10dp"
        android:text="@string/_0_00"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/cost"
        tools:layout_editor_absoluteX="21dp" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="390dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/buy"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cost_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>
