<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newUserTitle"
        android:layout_width="fill_parent"
        android:layout_height="150"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newUserUserName"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:autofillHints="Username"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/newUserTitle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/newUserPassword1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/newUserUserName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/newUserPassword2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/newUserPassword1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/newUserDone"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/done"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/newUserPassword2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/newUserBack"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:text="@string/back"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/newUserDone"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>